# postgrest-rs

./: Cargo.toml
src/: builder.rs  lib.rs
tests/: client.rs  multi_schema.rs
